RESOLVED FIXED 280100
Fix PLT with site isolation enabled
https://bugs.webkit.org/show_bug.cgi?id=280100
Summary Fix PLT with site isolation enabled
Alex Christensen
Reported 2024-09-20 17:58:41 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-20 17:59:25 PDT
Alex Christensen
Comment 2 2024-09-20 18:03:07 PDT
EWS
Comment 3 2024-09-20 22:33:50 PDT
Committed 284029@main (eb9b59aba2a6): <https://commits.webkit.org/284029@main> Reviewed commits have been landed. Closing PR #34015 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.